# VINS_Mono

config/euroc/: euroc_config.yaml
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/src/: feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: euroc.launch
